api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taiga-event
  labels:
    app.kubernetes.io/name: taiga-event
spec:
  ports:
    - port: 4000
      targetPort: 4000
      name: http
  selector:
    app.kubernetes.io/name: taiga-event
